Projet GL/test/src/test/deca/context/valid/increment4/class-equals-class.deca
// Test class A == class B

// Historique : cree le 20/01/2023

class A{}

class B{}

{
    A a = new A();
    B b = new B();
    boolean c = a == null;
    if(a == b){
        print("ok");
    }
}