Projet GL/test/src/test/deca/context/invalid/increment3/bool-plus-bool.deca
// Test bool + bool

// Historique : cree le 20/01/2023

{
    boolean b = true + false;

    if(b){
        print("error");
    }
}